# zzz-00009

./: README.md  config.yaml  pyproject.toml  test_duplicate.py  verify_fixes.py  verify_fixes_v2.py
examples/: config.yaml  config_invalid.yaml  config_move.yaml  mapping.csv  mapping_with_errors.csv
examples/handoff_exports/: delete_me_handoff.json
examples/reports/: batch_20260605_153823_4fb10719_result_20260605_153823_operations.json  batch_20260605_153823_4fb10719_result_20260605_153823_result.csv  batch_20260605_153823_4fb10719_result_20260605_153823_result.json  batch_20260605_153823_4fb10719_rollback_20260605_153959_result.csv  batch_20260605_153823_4fb10719_rollback_20260605_153959_result.json  batch_20260605_154142_3fb5341c_result_20260605_154142_operations.json  batch_20260605_154142_3fb5341c_result_20260605_154142_result.csv  batch_20260605_154142_3fb5341c_result_20260605_154142_result.json  batch_20260605_154142_3fb5341c_rollback_20260605_154239_result.csv  batch_20260605_154142_3fb5341c_rollback_20260605_154239_result.json  test_dryrun_001_dryrun_20260605_153557_conflicts.csv  test_dryrun_001_dryrun_20260605_153557_missing_evidence.csv  test_dryrun_001_dryrun_20260605_153557_pending.csv  test_dryrun_001_dryrun_20260605_153557_summary.json  test_dryrun_001_dryrun_20260605_153557_unregistered.csv  test_idempotent_001_result_20260605_180455_operations.json  test_idempotent_001_result_20260605_180455_result.csv  test_idempotent_001_result_20260605_180455_result.json  test_log_rb_001_result_20260605_215134_operations.json  (+2 more)
tests/: test_regression.py
(+18 files in other folders)
